--- a/Tipsy/Base.lproj/Main.storyboard
+++ b/Tipsy/Base.lproj/Main.storyboard
@@ -91,10 +91,10 @@
             </objects>
             <point key="canvasLocation" x="893" y="118"/>
         </scene>
-        <!--View Controller-->
+        <!--Calculator View Controller-->
         <scene sceneID="cPv-3I-dIG">
             <objects>
-                <viewController id="bxb-1Z-MoN" customClass="ViewController" customModule="Tipsy" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="bxb-1Z-MoN" customClass="CalculatorViewController" customModule="Tipsy" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Mp1-8j-baI">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
